# boltwood-parser

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/boltwood-parser/: __init__.py  entry.py
src/boltwood_parser/: collection.py  entry.py  utils.py
tests/: collection_test.py  entry_test.py
